# flake_dependency_manager

./: .gitmodules  CMakeLists.txt
source/: config_gen.cpp  config_gen.h  context.cpp  context.h  dep.cpp  dep.h  init.cpp  init.h  main.cpp  tools.cpp  tools.h
